[project]
name = "cache_lib"
version = "0.0.1"
authors = [
  { name="Nazar Toposlky", email="nazar.topolsky@vilmate.com" },
]
description = "Requests lib with cache"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Proprietary :: Confidential",
    "Operating System :: OS Independent",
]