[project]
name = "cache_lib"
version = "0.0.1"
authors = [
  { name="Nazar Toposlky", email="nazar.topolsky@vilmate.com" },
]
description = "Requests lib with cache"
readme = "README.md"
license = { file="LICENSE.txt" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Proprietary :: Confidential",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
aiohttp = ["aiohttp>=3.8.0"]
requests = ["requests>=2.15.0"]

[build-system]
requires = ["setuptools ~= 58.0"]
build-backend = "setuptools.build_meta"
